# PEPSI

./: .gitignore  ModelEtProgra.sln  ModelEtProgra.vcxproj  ModelEtProgra.vcxproj.filters  README.md  pricer
Excel/: Performances.xlsx  Pricing0Stats.xlsx  PricingtStats.xlsx  PrixMementis_t.xlsx  casDefav.xlsx  casDefavTest.xlsx  casFav.xlsx  casMedian1.xlsx  casMedian2.xlsx
Linux/: CMakeLists.txt  README.md  gtest_config.txt
Linux/test/: AsianOptionTest.cpp  CMakeLists.txt
TestsPricing/: DeltaAsian_0.cpp  DeltaBasket_0.cpp  DeltaBasket_1_0.cpp  DeviationPath.h  MementisCasDefav.cpp  MementisCasFav.cpp  MementisCasMedian1.cpp  MementisCasMedian2.cpp  PnLAsian.cpp  PnLCall.cpp  PnLPerf.cpp  PnlBasket.cpp  SimulAsian_0.cpp  SimulAsian_t.cpp  SimulBasket_0.cpp  SimulBasket_1_0.cpp  SimulBasket_1_t.cpp  SimulBasket_2_0.cpp  SimulBasket_2_t.cpp  SimulBasket_2d_t.cpp  SimulBasket_t.cpp  SimulCallDiv_0.cpp  SimulCall_0.cpp  SimulCall_t.cpp  SimulGraphAsian0.cpp  SimulGraphAsiant.cpp  SimulGraphBasket0.cpp  SimulGraphBaskett.cpp  SimulGraphCall0.cpp  SimulGraphCallt.cpp  SimulGraphPerf0.cpp  SimulGraphPerft.cpp  SimulMementis_0.cpp  SimulMementis_0_v2.cpp  SimulMementis_t.cpp  SimulMementis_t2.cpp  SimulPerf_0.cpp  SimulPerf_t.cpp  SimulPnLAsian.cpp  SimulPnLBasket.cpp  (+10 more)
TestsPricing/x64/Debug/: vc141.idb
Win32Pricing/: Win32Pricing.vcxproj  Win32Pricing.vcxproj.filters
Win32Pricing/src/: AbstractPricer.cpp  AbstractPricer.hpp  AsianOption.cpp  AsianOption.hpp  BasketOption.cpp  BasketOption.hpp  BlackScholesMertonModel.cpp  BlackScholesMertonModel.hpp  BlackScholesModel.cpp  BlackScholesModel.hpp  CallOption.cpp  CallOption.hpp  Couverture.cpp  Couverture.hpp  FCPMementis.cpp  FCPMementis.hpp  Model.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.hpp  PerformanceOption.cpp  PerformanceOption.hpp  PricerBS.cpp  PricerBS.hpp  PricerMC.cpp  PricerMC.hpp  QuantoOption.cpp  QuantoOption.hpp  pricer.cpp
data/: StatsCall0.py  asian0.txt  asiant.txt  basket0.txt  baskett.txt  call0.txt  callt.txt  mementis_casFav.txt  mementis_casMedian1.txt  perf0.txt  perft.txt
enc_temp_folder/236351383db6875844b50a89d7bd618/: SimulGraphAsiant.cpp
enc_temp_folder/4473b98184e378432cb4c2273853bf8/: SimulGraphPerft.cpp
enc_temp_folder/5f0c4cf553c0f3bbfdf16e36576c/: SimulMementis_t2.cpp
enc_temp_folder/abb7d56434f93bd2198f6a1d7d163f6/: SimulMementis_t.cpp
enc_temp_folder/e098bc4cfb416da44bc2ca8535690e0/: SimulGraphCallt.cpp
enc_temp_folder/e9dae32f89f2862f2c9b5b96322522db/: SimulGraphBaskett.cpp
